--- a/Web_Project/style.css
+++ b/Web_Project/style.css
@@ -8,6 +8,14 @@
     list-style: none;
 }
 
+.dark-mode{
+    transition: .4s;
+    background-color: black;
+    color: white;
+    border: white;
+    
+}
+
 
 header{
     font-size: large;
@@ -89,6 +97,10 @@ img{
     height: 17rem;
     width: 19.63rem;
 }
+.magni{
+    height: 1rem;
+    width: 1rem;
+}
 .description{
     padding: 1rem;
     height: 22rem;
@@ -141,3 +153,74 @@ img{
     font-weight: bold;
 }
  
+@media screen and (max-width: 1037px){
+    
+    .container{
+        max-width: 1037px;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .news{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 1rem;
+    }
+
+    
+  }
+
+  @media screen and (max-width: 671px){
+    
+
+    .container{
+        max-width: 659px;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .news{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 1rem;
+    }
+
+    .header-color{
+        padding-top: 10px;
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 160px;
+    }
+
+    .menu{
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+    }
+    .search-bar{
+        display: flex;
+        justify-content: center;
+        flex-direction: column; 
+    }
+
+    .box{
+        display: flex;
+        flex-direction: column;
+        margin: 0%;
+    }
+
+    .search{
+        width: 100%;
+        height: 10rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .search_button{
+        margin-left: 0.35rem;
+        width: 16rem;
+    }
+    .theme{
+        margin-right: 0;
+    }
+  }
